@@ -1669,7 +1669,7 @@ B<octet> can be escaped by prefixing it with SYN (0x16, ^V).
 	B<< C<Ps = 17> >>	Change colour of highlight characters to B<< C<Pt> >>
 	B<< C<Ps = 18> >>	Change colour of bold characters to B<< C<Pt> >> [deprecated, see 706]
 	B<< C<Ps = 19> >>	Change colour of underlined characters to B<< C<Pt> >> [deprecated, see 707]
-	B<< C<Ps = 20> >>	Change default background to B<< C<Pt> >>
+	B<< C<Ps = 20> >>	Change background pixmap parameters (see section XPM) (Compile XPM).
 	B<< C<Ps = 39> >>	Change default foreground colour to B<< C<Pt> >>.
 	B<< C<Ps = 46> >>	Change Log File to B<< C<Pt> >> I<unimplemented>
 	B<< C<Ps = 49> >>	Change default background colour to B<< C<Pt> >>.
