@@ -23,13 +23,16 @@ TODO: distributed clipboard example
           special privileges.
         - perl taint checking disabled, as urxvt no longer runs setuid/setgid
           itself.
-        - new extension example: perl/selection-pastebin, can be used to
+        - new perl extension automove-background that can be used to get
+          the same effect as pseudo-transparency with any pixmap.
+        - new perl extension example: perl/selection-pastebin, can be used to
           e.g. upload the selection to a webserver and generate a url, or
           similar stuff.
 	- use the scrollback buffer even when the scroll region doesn't
           span the whole screen, as long as it starts at row 0. Helps
           for programs displaying a status line at the bottom.
 	- selection popup now shows selection in dec/hex/oct.
+        - some fixes to xpm offste and scaling code.
         - perl/selection: matching on unicode characters in the selection
           code was O(n²), which equals infinity in some degenerate cases
           :-> Matching is now done on UTF-8, which makes it almost instant.
